syntax = "proto3";

option java_package = "com.inlineio.schemas";
option go_package = "schemas/";

package ikvschemas;

message IKVDocumentOnWire {
  // field_name vs field_value
  map<string, FieldValue> document = 1;
}

message FieldValue {
  FieldType fieldType = 1;
  bytes value = 2;
}

enum FieldType {
  // usually signifies writer/producer is ahead
  // w.r.t the symbol list
  UNKNOWN = 0;

  INT32 = 1;
  INT64 = 2;
  FLOAT32 = 3;
  FLOAT64 = 4;
  STRING = 5;
  BYTES = 6;
  BOOLEAN = 7;
}

message IKVStoreConfig {
  // Map key uniquely defines a config key
  // Config keys are unique across all typed maps
  map<string, string> stringConfigs = 1;
  map<string, int64> intConfigs = 2;
  map<string, float> floatConfigs = 3;
  map<string, bytes> bytesConfigs = 4;
  map<string, bool> booleanConfigs = 5;
}