syntax = "proto3";

option java_package = "com.inlineio.schemas";

package ikvschemas;

import "google/protobuf/timestamp.proto";
import "common.proto";

service InlineKVWriteService {
  rpc helloWorld(HelloWorldRequest) returns (HelloWorldResponse) {}

  // Write methods
  rpc upsertFieldValues(UpsertFieldValuesRequest) returns (Status) {}
  rpc batchUpsertFieldValues(BatchUpsertFieldValuesRequest) returns (Status) {}

  rpc deleteFieldValues(DeleteFieldValueRequest) returns (Status) {}
  rpc batchDeleteFieldValues(BatchDeleteFieldValuesRequest) returns (Status) {}

  rpc deleteDocument(DeleteDocumentRequest) returns (Status) {}
  rpc batchDeleteDocuments(BatchDeleteDocumentsRequest) returns (Status) {}

  // Gateway-specified configuration
  rpc getUserStoreConfig(GetUserStoreConfigRequest) returns (GetUserStoreConfigResponse) {}
}

message HelloWorldRequest {
  string echo = 1;
}

message HelloWorldResponse {
  string echo = 1;
}


message UpsertFieldValuesRequest {
  UserStoreContextInitializer userStoreContextInitializer = 1;
  google.protobuf.Timestamp timestamp = 2;
  IKVDocumentOnWire document = 3;
}

message BatchUpsertFieldValuesRequest {
  UserStoreContextInitializer userStoreContextInitializer = 1;
  google.protobuf.Timestamp timestamp = 2;
  repeated IKVDocumentOnWire documents = 3;
}

// Delete fields from a document.
message DeleteFieldValueRequest {
  UserStoreContextInitializer userStoreContextInitializer = 1;
  google.protobuf.Timestamp timestamp = 2;
  IKVDocumentOnWire documentId = 3;
  repeated string fieldNames = 4;
}

// Delete fields from a batch of documents.
message BatchDeleteFieldValuesRequest {
  UserStoreContextInitializer userStoreContextInitializer = 1;
  google.protobuf.Timestamp timestamp = 2;
  repeated IKVDocumentOnWire documentIds = 3;
  repeated string fieldNames = 4;
}

// Delete a document.
message DeleteDocumentRequest {
  UserStoreContextInitializer userStoreContextInitializer = 1;
  google.protobuf.Timestamp timestamp = 2;
  IKVDocumentOnWire documentId = 3;
}

// Delete a batch of documents.
message BatchDeleteDocumentsRequest {
  UserStoreContextInitializer userStoreContextInitializer = 1;
  google.protobuf.Timestamp timestamp = 2;
  repeated IKVDocumentOnWire documentIds = 3;
}

message UserStoreSchemaUpdateRequest {
  UserStoreContextInitializer userStoreContextInitializer = 1;

  // duplicates (exact match) are ignored
  // conflicts throw an error (ex. re-registering with different type)
  repeated FieldSchema newFieldsToAdd = 2;
}

// TO BE DEPRECATED
message FieldSchema {
  // the case-sensitive field name
  string name = 1;

  // unique field-id. `name` and `id`
  // have 1:1 mappings.
  int32 id = 2;

  FieldType fieldType = 3;
}

message GetUserStoreConfigRequest {
  UserStoreContextInitializer userStoreContextInitializer = 1;
}

message GetUserStoreConfigResponse {
  IKVStoreConfig globalConfig = 1;
}

message Status {
}

// Used to construct UserStoreContext -
// used for schema/configuration/etc.
message UserStoreContextInitializer {
  AccountCredentials credentials = 1;
  string storeName = 2;
}

message AccountCredentials {
  string accountId = 1;
  string accountPasskey = 2;
}