syntax = "proto3";

option java_package = "com.inlineio.schemas";
option go_package = "schemas/";

package ikvschemas;

import "google/protobuf/timestamp.proto";
import "common.proto";

message EventHeader {
  optional google.protobuf.Timestamp sourceTimestamp = 1;
}

message IKVDataEvent {
  EventHeader eventHeader = 1;

  // event data (upsert, delete, etc...)
  oneof event {
    UpsertDocumentFieldsEvent upsertDocumentFieldsEvent = 2;
    DeleteDocumentFieldsEvent deleteDocumentFieldsEvent = 3;
    DeleteDocumentEvent deleteDocumentEvent = 4;
    DropFieldEvent dropFieldEvent = 5;
  }
}

// Upsert fields for specified document.
message UpsertDocumentFieldsEvent {
  IKVDocumentOnWire document = 1;
}

// Delete specified fields for specified document.
message DeleteDocumentFieldsEvent {
  IKVDocumentOnWire documentId = 1;
  repeated string fieldsToDelete = 2;
}

// Delete specified document.
message DeleteDocumentEvent {
  IKVDocumentOnWire documentId = 1;
}

// Drop (delete) field(s) from all documents. No-op if the fields don't exist.
// Attempts to delete primary-key will be ignored.
message DropFieldEvent {
  // field name list (exact match required)
  repeated string field_names = 1;

  // field name prefix list (exact match required)
  repeated string field_name_prefixes = 2;

  // CAUTION! drops all except primary-key
  // Only checked if field_names and field_name_prefixes are empty
  // set to false when not populated by proto3
  bool drop_all = 3;
}